--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Gina Lucy",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "express": "^4.16.4"
   }
 }
